Fix ncm port in Helm Chart
Issue-ID: MULTICLOUD-1065
Signed-off-by: Ritu Sood <ritu.sood@intel.com>
Change-Id: I45dfca5007e030420da9228ff698bfb729348dd4

--- a/deployments/helm/v2/onap4k8s/ncm/values.yaml
+++ b/deployments/helm/v2/onap4k8s/ncm/values.yaml
@@ -54,7 +54,7 @@ readiness:
   periodSeconds: 30
 
 service:
-  type: ClusterIP
+  type: NodePort
   name: ncm
   portName: ncm
   internalPort: 9031
