--- a/src/monitor/deploy/operator.yaml
+++ b/src/monitor/deploy/operator.yaml
@@ -17,8 +17,8 @@ spec:
       serviceAccountName: monitor
       containers:
         - name: monitor
-          # Replace this with the built image name
-          image: emcov2/monitor:latest
+          # so we have to push this one first aye
+          image: igordcard/monitor:latest
           command:
           - /opt/monitor/monitor
           imagePullPolicy: IfNotPresent
