--- a/src/dcm/config.json
+++ b/src/dcm/config.json
@@ -1,15 +1,14 @@
 {
+    "database-ip": "172.18.0.2",
+    "database-type": "mongo",
+    "plugin-dir": "plugins",
+    "service-port": "9077",
     "ca-file": "ca.cert",
     "server-cert": "server.cert",
     "server-key": "server.key",
     "password": "",
-    "database-ip": "172.18.0.2",
-    "database-type": "mongo",
-    "plugin-dir": "plugins",
     "etcd-ip": "172.18.0.3",
     "etcd-cert": "",
     "etcd-key": "",
-    "etcd-ca-file": "",
-    "service-port": "9015",
-    "log-level": "warn"
+    "etcd-ca-file": ""
 }
