--- a/kud/tests/vnfs/comp-app/collection/app2/helm/prometheus-operator/add_m3db_remote.yaml
+++ b/kud/tests/vnfs/comp-app/collection/app2/helm/prometheus-operator/add_m3db_remote.yaml
@@ -1,6 +1,6 @@
 spec:
   remoteWrite:
-  - url: "http://m3coordinator-m3db-cluster.training.svc.cluster.local:7201/api/v1/prom/remote/write"
+  - url: "http://192.168.121.15:32701/api/v1/prom/remote/write"
     writeRelabelConfigs:
       - targetLabel: metrics_storage
         replacement: m3db_remote
