LDAP to SAML conversion

--- a/project.config
+++ b/project.config
@@ -5,3 +5,4 @@
 [access "refs/*"]
 	read = group GitHub Replication
 	owner = group ldap/onap-gerrit-multicloud-k8s-committers
+	owner = group saml/onap-gerrit-multicloud-k8s-committers
