Update onap4k8s playbooks to use v2 chart.
Issue-ID: MULTICLOUD-1181
Signed-off-by: Todd Malsbary <todd.malsbary@intel.com>
Change-Id: Iabf35f401080a123f7a898ae7188544768d835ec

--- a/kud/deployment_infra/playbooks/configure-onap4k8s.yml
+++ b/kud/deployment_infra/playbooks/configure-onap4k8s.yml
@@ -31,7 +31,7 @@
       command: /usr/bin/make repo
       register: make_repo
       args:
-        chdir: /opt/multicloud/deployments/helm/onap4k8s
+        chdir: /opt/multicloud/deployments/helm/v2/onap4k8s
 
     - debug:
         var: make_repo.stdout_lines
@@ -40,16 +40,16 @@
       command: /usr/bin/make all
       register: make_all
       args:
-        chdir: /opt/multicloud/deployments/helm/onap4k8s
+        chdir: /opt/multicloud/deployments/helm/v2/onap4k8s
 
     - debug:
         var: make_all.stdout_lines
 
     - name: Change the onap4k8s directory and run the command helm install
-      command: /usr/local/bin/helm install dist/packages/multicloud-k8s-5.0.0.tgz --name multicloud-onap8ks --namespace onap4k8s-ns --set service.type=NodePort
+      command: /usr/local/bin/helm install dist/packages/emco-0.1.0.tgz --name emco --namespace emco
       register: helm_install
       args:
-        chdir: /opt/multicloud/deployments/helm/onap4k8s
+        chdir: /opt/multicloud/deployments/helm/v2/onap4k8s
 
     - debug:
         var: helm_install.stdout_lines
