Enable the prometheus crd creation flags
Issue-ID: MULTICLOUD-1174
Signed-off-by: Rajamohan Raj <rajamohan.raj@intel.com>
Change-Id: I21186c464a2e41d9ec44e4002295c94de060e8c6

--- a/kud/tests/vnfs/comp-app/collection/app2/helm/prometheus-operator/values.yaml
+++ b/kud/tests/vnfs/comp-app/collection/app2/helm/prometheus-operator/values.yaml
@@ -1162,11 +1162,11 @@ prometheusOperator:
 
   ## Deploy CRDs used by Prometheus Operator.
   ##
-  createCustomResource: false
+  createCustomResource: true
 
   ## Attempt to clean up CRDs created by Prometheus Operator.
   ##
-  cleanupCustomResource: false
+  cleanupCustomResource: true
 
   ## Labels to add to the operator pod
   ##
