--- a/kud/deployment_infra/images/qat_plugin_privileges.yaml
+++ b/kud/deployment_infra/images/qat_plugin_privileges.yaml
@@ -21,7 +21,7 @@ spec:
               - key: feature.node.kubernetes.io/pci-0b40_8086.present
                 operator: In
                 values:
-                - true
+                - "true"
       containers:
       - name: intel-qat-kernel-plugin
         securityContext:
