Adding validations for all JSON data across modules
Issue-ID: MULTICLOUD-1198
Signed-off-by: Rajamohan Raj <rajamohan.raj@intel.com>
Change-Id: Idc2fbfd6e875bd7b662c7d60925aeb776b3f7bea

--- a/docs/emco_apis.yaml
+++ b/docs/emco_apis.yaml
@@ -3210,10 +3210,10 @@ components:
               maxLength: 128
               example: "provider-1"
             defaultGateway:
-              type: boolean
+              type: "string"
               description: Is this interface default gateway
               maxLength: 128
-              example: false
+              example: "false"
             ipAddress:
               type: string
               description: Name of the network
