Update CLI with complete get implementation
CLI updated with get functionality. Also adding
vFw test case

Issue-ID: MULTICLOUD-1065
Signed-off-by: Ritu Sood <ritu.sood@intel.com>
Change-Id: I7bd22aca9fac9cb7b1f4c93d0ffad5b07b62cced

--- a/src/tools/emcoctl/examples/emco-cfg.yaml
+++ b/src/tools/emcoctl/examples/emco-cfg.yaml
@@ -4,3 +4,9 @@
   clm:
     host: localhost
     port: 9061
+  ncm:
+    host: localhost
+    port: 9031
+  ovnaction:
+    host: localhost
+    port: 9051
