Introduce Monitor support for CSR resource
These changes allow the Monitor to also track CSR
(CertificateSigningResource) resources which will make
it possible to know when a certificate has been issued by
the K8s cluster signer. In turn, DCM will be able to read,
store and use that certificate to generate kubeconfigs.

Issue-ID: MULTICLOUD-1143
Signed-off-by: Igor D.C <igor.duarte.cardoso@intel.com>
Change-Id: I7facd27bbfe08891151bb3b6a9a19948435e24e4

--- a/src/monitor/deploy/operator.yaml
+++ b/src/monitor/deploy/operator.yaml
@@ -18,7 +18,8 @@ spec:
       containers:
         - name: monitor
           # Replace this with the built image name
-          image: emcov2/monitor:latest
+          # so we have to push this one first aye
+          image: igordcard/monitor:latest
           command:
           - /opt/monitor/monitor
           imagePullPolicy: IfNotPresent
