Introduce Monitor support for CSR resource
These changes allow the Monitor to also track CSR
(CertificateSigningResource) resources which will make
it possible to know when a certificate has been issued by
the K8s cluster signer. In turn, DCM will be able to read,
store and use that certificate to generate kubeconfigs.

Out-of-tree actions required:
- publish monitor's docker image built from this source
  onto emcov2/monitor:latest

Issue-ID: MULTICLOUD-1143
Change-Id: I7facd27bbfe08891151bb3b6a9a19948435e24e4
Signed-off-by: Igor D.C <igor.duarte.cardoso@intel.com>

--- a/src/monitor/deploy/operator.yaml
+++ b/src/monitor/deploy/operator.yaml
@@ -18,6 +18,7 @@ spec:
       containers:
         - name: monitor
           # Replace this with the built image name
+          # so we have to push this one first aye
           image: emcov2/monitor:latest
           command:
           - /opt/monitor/monitor
