Update packages images path
Issue-ID: MULTICLOUD-1065
Signed-off-by: Ritu Sood <ritu.sood@intel.com>
Change-Id: I1ae50bafe7b4e40811d5d2061460e1c0240e3dde

--- a/deployments/helm/v2/onap4k8s/clm/values.yaml
+++ b/deployments/helm/v2/onap4k8s/clm/values.yaml
@@ -23,7 +23,7 @@ global:
 #################################################################
 # application image
 repository: registry.hub.docker.com
-image: rtsood/emco:stable
+image: emcov2/emco:stable
 pullPolicy: Always
 command: "/opt/emco/entrypoint"
 args: "clm"
